--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,8 +1,9 @@
 <!DOCTYPE <!DOCTYPE html>
 <html>
 <title>welcome all!</title>
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename = 'style.css') }}">
-<h1>hey there  {{ name }}</h1>
-<h2>Hello everybody . How are you all?</h2>
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename = 'style.css') }}" >
+<a href="http://127.0.0.1:5000/profile/">Visit our HTML page</a>
 
-</html>>
+<h1>hey there  {{ name }}</h1>
+<h2>yay yay</h2>
+</html>> bn 
