added user name as nisha

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2,7 +2,7 @@
 <html>
 <title>welcome all!</title>
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename = 'style.css') }}" >
-<a href="http://127.0.0.1:5000/profile/">Visit our HTML page</a>
+<a href="http://127.0.0.1:5000/profile/nisha">Visit our HTML page</a>
 
 <h1>hey there  {{ name }}</h1>
 <h2>yay yay</h2>
